Top performers added

--- a/100daysofcodeWinners.html
+++ b/100daysofcodeWinners.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Opportunities page of CodeIN-Community-Website">
 
-  <title>CodeIN Community | Hacktoberfest 2022 </title>
+  <title>CodeIN Community | 100 days of Code </title>
 
 
   <!-- Bootstrap CSS -->
@@ -49,6 +49,11 @@
 <!-- 	social share button libbrary -->
 	<script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=633966155a306f001995dacc&product=sop' async='async'></script>
 <!-- 	social share button libbrary -->
+
+<!------Google Fonts-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	
 </head>
 
@@ -130,7 +135,7 @@
     <div class="col-md-4">
       <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
         <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">100 days of Code</h2><br>
-        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Winners</h2>
+        <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Top Performers</h2>
         <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
       </div>
     </div>
@@ -157,211 +162,320 @@
         <thead>
           <tr>
             <th scope="col">Name</th>
-            <th scope="col">College Name</th>
+            <th scope="col">College Name/Company Name</th>
           </tr>
         </thead>
 
 
         <tbody>
           <tr>
-            <td>Mark</td>
-            <td>Otto</td>
+            <td>Priya Chakraborty</td>
+            <td>Siliguri Institute Of Technology</td>
           </tr>
           <tr>
-            <td>Jacob</td>
-            <td>Thornton</td>
+            <td>Rahul Kumar</td>
+            <td>Bhagalpur College of Engineering
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Pavan Kumar Reddy Bhavanam
+            </td>
+            <td>Indian Institute of Information Technology Nagpur
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Aditya Shaw
+            </td>
+            <td>Asansol Engineering College
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Resham Bharti
+            </td>
+            <td>Lovely Professional University
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Abhishek Kumar
+            </td>
+            <td>Krishna Engineering College
+              </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Siddhi Bhanushali
+            </td>
+            <td>Smt Indira Gandhi clg of engineering
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Nestor Franklin Castillo Centurio
+            </td>
+            <td>Universidad Mayor Real y Pontificia de San Francisco Xavier de Chuquisaca
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Abhishek Sharma
+            </td>
+            <td>University of Engineering & Management, Kolkata
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Pushkar Roy
+            </td>
+            <td>Oriental institute of science and technology
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Rimjhim Kumari
+            </td>
+            <td>Amity University Patna
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Kunal Mittal
+            </td>
+            <td>Giani Zail Singh Campus College Of Engineering And Technology, Bathinda, Punjab
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Nithish R
+            </td>
+            <td>Reva University
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Anjali Agarwal
+            </td>
+            <td>Techno Main Salt Lake
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Sanjay Singh
+            </td>
+            <td>Sri Guru Gobind Singh College of Commerce, Delhi University
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Shatanik Mahanty
+            </td>
+            <td>Government College of Engineering and Leather Technology
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Akshat Pattiwar
+            </td>
+            <td>Vellore Institute of Technology
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Aditya Chakraborty
+            </td>
+            <td>Siliguri Institute Of Technology
+              </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Shruti Mishra
+            </td>
+            <td>Thakur college of engineering and technology
+              </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Anvesha Dixit
+            </td>
+            <td>Banasthali Vidyapith Jaipur
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>SREEJITH S A
+            </td>
+            <td>John Cox Memmorial CSI Institute Of Technology.
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Nishtha Pandey
+            </td>
+            <td>AKGEC, Ghaziabad
+          </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Ankit Bhowmick
+            </td>
+            <td>UEM, Kolkata
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Khushi Panwar
+            </td>
+            <td>Shaheed Rajguru College of Applied Sciences for Women, University of Delhi
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Atharva Varule
+            </td>
+            <td>Sandip Polytechnic
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Ayush Raj
+            </td>
+            <td>BIT MESRA
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Aakash Kumar
+            </td>
+            <td>Lovely professional University
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Shiwangi Kumari
+            </td>
+            <td>Techno Engineering college Banipur
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Sarthak Goel
+            </td>
+            <td>VIPS
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Souvik Sarkar
+            </td>
+            <td>Institute of Engineering and Management, Kolkata
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Adarsh Upadhyay
+            </td>
+            <td>Jaypee Institute of Information Technology
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Pranay Kharabe
+            </td>
+            <td>S. B. Jain Institute of Technology, Management and Research
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>SAPTARSHI CHATTERJEE
+            </td>
+            <td>Government College Of Engineering and Leather Technology
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Tejaswini Rout
+            </td>
+            <td>C V raman Global university, bhubaneswar
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Sayak Ghosh
+            </td>
+            <td>Jalpaiguri Government Engineering College
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Kashish Kaur
+            </td>
+            <td>Banasthali Vidyapith Jaipur
+              </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Garima Sharma
+            </td>
+            <td>Indira Gandhi Delhi Technical University for Women
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Sowham Bhuin
+            </td>
+            <td>Jalpaiguri Government Engineering College
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Kunal Aggarwal
+            </td>
+            <td>Haldia Institute of Technology
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Sneha Chauhan
+            </td>
+            <td>Indira Gandhi Delhi technical university for Women
+              </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Saksham Saklani
+              </td>
+            <td>Graphic era University
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Anjali Bhawari
+            </td>
+            <td>KKWIEER
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Deblina Das
+            </td>
+            <td>Lovely Professional University
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Nagini S
+            </td>
+            <td>House Wife
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Ankana Chakraborty
+            </td>
+            <td>Sister Nivedita University
+              </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Vanshita Rohela
+            </td>
+            <td>Vellore Institute of Technology, Bhopal
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Sandhya mishra
+            </td>
+            <td>Vivekanand institute of technology jaipur
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>ARIJIT GHOSH
+            </td>
+            <td>Ramkrishna Mahato Government Engineering College
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Anwesha Bhowmick
+            </td>
+            <td>Siliguri Institute Of Technology
+            </td>
           </tr>
           <tr>
-            <td>Larry the Bird</td>
-            <td>@twitter</td>
+            <td>Aman Ahmed Siddiqui
+            </td>
+            <td>Aliah University
+            </td>
+          </tr>
+          <tr>
+            <td>Jayashree Eswaran
+            </td>
+            <td>Sona College of Technology
+            </td>
+          </tr>
+          <tr>
+            <td>Sneha kumari
+            </td>
+            <td>Meerut Institute of Technology
+            </td>
           </tr>
         </tbody>
       </table>
@@ -371,6 +485,51 @@
 
  <!---------Winners table End-------------------------------------------------->
 
+ <!------------------------------------------------------------------------------>
+  
+<section id="rules">
+    <div class="container" data-aos="fade-up" data-aos-duration="1500">
+			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">Rules and Regulations</h1>
+			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+
+		<br><br>
+    <div class="row">
+      <div class="point point-1 col-md-6">
+        <h4>Top Performing participants will be chosen by CodeIN Community will receive Goodies (T-shirt)👕 </h4>
+      </div>
+        <div class="col-md-6">
+          <img class="rules-img" src="assets/img/goodies.png">
+        </div>
+    </div>
+      <br><br><hr><br><br>
+
+      <div class="row">
+        <div class="col-md-6">
+          <img class="rules-img" src="assets/img/Recruitment-Journey.png">
+        </div>
+
+        <div class="point point-2 col-md-6">
+          <h4>Top performing participants will be choosen according to the No. of days completed and Code Quality and the Final list of Qualified Participants will be published on the Website once the program will over.
+          </h4>
+        </div>
+     </div>
+
+     <br><br><hr><br><br>
+
+     <div class="row">
+      <div class="col-md-6">
+        <h4>All participants will receive 100 days of code Completion Certificate and Course Voucher worth Rs.4000😍</h4>
+      </div>
+      <div class="col-md-6">
+        <img class="rules-img" src="assets/img/certificate.png">
+      </div>
+     </div>
+  </div>
+</section>
+
+<br><br>
+
+  <!------------------------------------------------------------------------------>
   <!---- Sponsors
     ==================================== -->
 
