--- a/100daysofcode.html
+++ b/100daysofcode.html
@@ -495,7 +495,7 @@
 		<br><br>
     <div class="row">
       <div class="point point-1 col-md-6">
-        <h4>Top Performing participants will be chosen by CodeIN Community will receive Goodies (T-shirt)👕 </h4>
+        <h4>Top Performing participants will be chosen by CodeIN Community will receive Goodies (T-shirt)👕+ Course Voucher+ Top Performer Certificate </h4>
       </div>
         <div class="col-md-6">
           <img class="rules-img" src="assets/img/goodies.png">
@@ -509,7 +509,7 @@
         </div>
 
         <div class="point point-2 col-md-6">
-          <h4>Top performing participants will be choosen according to the No. of days completed and Code Quality and the Final list of Qualified Participants will be published on the Website once the program will over.
+          <h4>Top performing participants has been choosen according to the No. of days completed and Code Quality.</h4>
           </h4>
         </div>
      </div>
