--- a/100daysofcode.html
+++ b/100daysofcode.html
@@ -509,7 +509,7 @@
         </div>
 
         <div class="point point-2 col-md-6">
-          <h4>Top performing participants has been choosen according to the No. of days completed and Code Quality.</h4>
+          <h4>Top performing participants have been chosen according to the number of days completed and code quality.</h4>
           </h4>
         </div>
      </div>
