--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 									<a id="hacktoberfest" target="_blank" href="./hacktoberfest2022.html">
 										HacktoberFest 2022
 									</a>
-									<a id="hacktoberfest" target="_blank" href="./100daysofcodeWinners.html">
+									<a id="hacktoberfest" target="_blank" href="./100daysofcode.html">
 										100 Days of code WINNERS
 									</a>
 							</div>
