--- a/100daysofcode.html
+++ b/100daysofcode.html
@@ -495,7 +495,7 @@
 		<br><br>
     <div class="row">
       <div class="point point-1 col-md-6">
-        <h4>Top Performing participants will be chosen by CodeIN Community will receive Goodies (T-shirt)👕+ Course Voucher+ Top Performer Certificate </h4>
+        <h4>Top Performing participants will be receiving Goodies (T-shirt)👕+ Course Voucher+ Top Performer Certificate </h4>
       </div>
         <div class="col-md-6">
           <img class="rules-img" src="assets/img/goodies.png">
@@ -518,7 +518,7 @@
 
      <div class="row">
       <div class="col-md-6">
-        <h4>All participants will receive 100 days of code Completion Certificate and Course Voucher worth Rs.4000😍</h4>
+        <h4>All participants who completed the program will receive 100 days of code Completion Certificate and Course Voucher worth Rs.4000😍</h4>
       </div>
       <div class="col-md-6">
         <img class="rules-img" src="assets/img/certificate.png">
