--- a/index.html
+++ b/index.html
@@ -1690,10 +1690,13 @@
 					  <form class="mt-5" id="contactForm">
 						  <div class="form-row">
 							  <div class="form-group col-md-6 ">
-								<input type="text" class="form-control" id="inputName"  placeholder="Name">
+								<input type="text" class="form-control" id="inputName"  placeholder="FullName">
 							  </div>
 							  <div class="form-group col-md-6 ">
 							  <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+							  </div>
+							  <div class="form-group col-md-6 ">
+							  <input type="Contact-No." class="form-control" id="inputContact-No." placeholder="Contact-No.">
 							  </div>
 							</div>
 						  <div class="form-group ">
