--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
 							<h4>Full Stack Development</h4>
 							<p>Speaker : Praveen Kumar Purushothaman (YouTuber), Ashtja Prasad (core team member)</p>
 							<p>Date of Event : 15/01/2022</p>
-							<a href="https://youtu.be/7aS6ru6Omts" class="btn btn-danger">WATCH NOW</a>
+							<a href="https://youtu.be/7aS6ru6Omts" class="btn btn-danger" target="_blank">WATCH NOW</a>
 						</div>
 					</div>
 
@@ -1102,7 +1102,7 @@
 							<h4>Get Started With Machine Learning</h4>
 							<p>Speaker : Saurav Mukherjee (Founder CodeIN Community)</p>
 							<p>Date of Event : 21/09/2021</p>
-							<a href="https://youtu.be/lUSixxX9pK4" class="btn btn-danger">WATCH NOW</a>
+							<a href="https://youtu.be/lUSixxX9pK4" class="btn btn-danger" target="_blank">WATCH NOW</a>
 						</div>
 					</div>
 
@@ -1124,7 +1124,7 @@
 							<h4> Introduction to HACKTOBERFEST' 2021</h4>
 							<p>Speaker : Praveen Kumar Purushothaman (Full Stack Developer, YouTuber)</p>
 							<p>Date of Event : 11/10/2021</p>
-							<a href="https://youtu.be/fmDYVtInswU" class="btn btn-danger">WATCH NOW</a>
+							<a href="https://youtu.be/fmDYVtInswU" class="btn btn-danger" target="_blank">WATCH NOW</a>
 						</div>
 					</div>
 				</div>
