issue 579 solved except for contact form

--- a/index.html
+++ b/index.html
@@ -1823,8 +1823,8 @@
 						<h3 class="footer-titel">Join Us</h3>
 						<ul class="footer-link">
 							<li><a href="#events">Events</a></li>
-							<li><a href="#">Hackathons</a></li>
-							<li><a href="#">Open Source</a></li>
+							<!-- <li><a href="#">Hackathons</a></li> -->
+							<!-- <li><a href="#">Open Source</a></li> -->
 							<li><a
 									href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer
 									Group</a></li>
