--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 
 							<h2>CodeIN Community </h2>
 							<p>CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
-								Where we organize Events, Hackathons, and Workshops on different Technologies.
-								Also, We Share Resources, Roadmaps to learn different technologies and share
-								opportunities related to Internships and different tech programs.
+								Here we whole-heartedly organize engaging events, Hackathons, and Workshops on different emerging technologies.
+								Additionally, We share guided roadmaps and resources to learn different technologies and share
+								opportunities related to upcoming internships and different tech programs.
 
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
@@ -206,7 +206,8 @@
 									More</i></a>
 							</div>
 
-							<br>Join the community on Discord for interaction with students from all over India.
+							<br>Want to be a part of this amazing community?<br>
+							Hit the JOIN NOW button above and let's connect on discord :)
 							</p>
 							<br>
 
@@ -244,7 +245,7 @@
 						</div>
 						<div class="services-content">
 							<h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
-							<p> Join the community on Discord for interaction with students from all over the India.
+							<p> Join in the discord community and connect with like minded people across the country.
 							</p>
 							</a>
 						</div>
@@ -260,8 +261,8 @@
 						</div>
 						<div class="services-content">
 							<h3><a href="https://t.me/CodeINCommunity">Telegram Group</a></h3>
-							<p> Join the Telegram group for all the updates on upcoming opportunities and interaction
-								based on that.
+							<p> Do not forget to follow us on telegram to stay updated about all the upcoming programs, openings and internships.
+					
 							</p>
 							</a>
 						</div>
@@ -278,7 +279,7 @@
 						<div class="services-content">
 							<h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">LinkedIn Page</a>
 							</h3>
-							<p> Follow the official page of CodeIN community where we posts about all the upcoming
+							<p> Follow the official page of CodeIN Community where we regularly post about all the upcoming
 								workshops and
 								events. </p>
 							</a>
@@ -296,9 +297,9 @@
 						<div class="services-content">
 							<h3><a href="https://github.com/SauravMukherjee44/CodeIN-Community-Website">Open Source
 									Project</a></h3>
-							<p> This is the GitHub repository of Open Source CodeIN Community Website built using HTML,
+							<p> This is the GitHub repository of CodeIN Community Website built using HTML,
 								CSS and
-								JavaScript. </p>
+								JavaScript and is Open Source. </p>
 							</a>
 						</div>
 					</div>
@@ -313,7 +314,7 @@
 						</div>
 						<div class="services-content">
 							<h3><a href="https://twitter.com/CodeinCommunity">Twitter</a></h3>
-							<p> Follow the official Twitter Page of the CodeIN Community for the updated information.
+							<p> Follow the official Twitter Page of the CodeIN Community and stay updated.
 							</p>
 							</a>
 						</div>
@@ -330,8 +331,8 @@
 						<div class="services-content">
 							<h3><a href="https://www.youtube.com/channel/UCjzAiV0IpFJ45UgnHnc_4ug">YouTube Content</a>
 							</h3>
-							<p> Subscribe to the Youtube channel for all the upcoming Webinars, Tech Events and
-								Workshops. </p>
+							<p> Subscribe to the Youtube channel to not miss any upcoming webinar, tech events and
+								workshops. </p>
 							</a>
 						</div>
 					</div>
@@ -354,19 +355,19 @@
 						<div>
 							<div class="site-heading" data-aos="fade-left" data-aos-duration="1500">
 								<p class="mb-3">Explore opportunities!</p>
-								<h2 class="section-title com">What We offer through the Community</h2>
+								<h2 class="section-title com">How does this community serve you?</h2>
 							</div>
 							<div class="content" data-aos="fade-up" data-aos-duration="1500">
 								<ul class="section-feature">
 									<li>&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
 									<li>&#x25BA;&nbsp; HELP EVERYONE TO LEARN & GROW</li>
 									<li>&#x25BA;&nbsp; WORKSHOPS AND MEETING SESSIONS</li>
-									<li>&#x25BA;&nbsp; HACKATHONS & INTERNSHIP OPPORTUNITY</li>
+									<li>&#x25BA;&nbsp; HACKATHONS & INTERNSHIP OPPORTUNITIES</li>
 									<li>&#x25BA;&nbsp; EXPOSURE TO STUDENTS & MENTORS AROUND THE WORLD</li>
 									<li>&#x25BA;&nbsp; GOODIES TO BEST PERFORMERS AND CONTRIBUTORS</li>
 								</ul>
 
-								<a href="./benefit.html" target="_blank" class="btn btn-common mt-3">Go to benefit
+								<a href="./benefit.html" target="_blank" class="btn btn-common mt-3">Go to benefits
 									page</a>
 							</div>
 						</div>
@@ -1673,17 +1674,17 @@
 		<button class="accordionFAQs" data-toggle="collapse"
 		data-target="#collapseOne" >What is CodeIN Community? </button>
 		<div class="panelFAQs">
-  			<p class="panelParaFAQs">CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts. Where we organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies and share opportunities related to Internships and different tech programs.</p>
+  			<p class="panelParaFAQs">CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts, where we organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies and share opportunities related to Internships and different tech programs.</p>
 		</div>
 
-		<button class="accordionFAQs">How to join community as a member?</button>
+		<button class="accordionFAQs">How to join the community as a member?</button>
 		<div class="panelFAQs">
   			<p class="panelParaFAQs"><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" >
 				
-				JOIN US NOW</a> on our discord server and become member of our community. <br><a href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on other platforms.  </p>
+				JOIN US NOW</a> on our discord server and becomea a valued member of our community. <br><a href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on your favourite platforms.  </p>
 		</div>
 
-		<button class="accordionFAQs">How to join organising Team?</button>
+		<button class="accordionFAQs">How to join the organising Team?</button>
 		<div class="panelFAQs">
 			<p class="panelParaFAQs">
 				  <a href="https://bit.ly/JoinCodeINCommunity">CLICK HERE </a> to join our Core Team<br>
@@ -1704,7 +1705,7 @@
 				<br>
 			</ul>
 		</div>
-		<button class="accordionFAQs">What type of Events we conduct?</button>
+		<button class="accordionFAQs">What type of events do we conduct?</button>
 		<div class="panelFAQs">
   			<p class="panelParaFAQs">We organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a> to check Our Events.</p>
 		</div>
@@ -1832,8 +1833,9 @@
 						</ul>
 					</div>
 					<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
-						<h3 class="footer-news">Subscribe to our Newsletter</h3>
-						<p class="text-light mb-2">Subscribe to get latest updates and updates.</p>
+						<h3 class="footer-news">Want to stay update?<br>
+							Subscribe to our Newsletter :)</h3>
+						<p class="text-light mb-2">Subscribe to get latest updates.</p>
 						<div class="mail d-flex">
 						<input type="email" id="Email" placeholder="Enter your email" />
 						<a type="submit" id="btns" label="submit" placeholder="submit">Submit</a>
