--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -137,7 +137,7 @@
     <div class="col-md-1"></div>
 
     <div class="col-md-3">
-      <div style="float: center; margin-right : 26%; margin-left: 5%;" class="searchbar_div">
+      <div style="float: left;margin-right: 5%;" class="searchbar_div">
         <input style="border-radius: 3rem; padding: 10px;border-color: grey;width: 130%;" id="searchbar"
           onkeyup="search_blog()" type="text" name="search" placeholder='Search projects.....' />
       </div>
@@ -399,43 +399,41 @@
       <div class="imgbox wow fadeInLeft animated">
 
         <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-          <div class="community_box box1">
+          <div class="community_box box1 ">
             <a href="https://www.geeksforgeeks.org/" style="text-decoration: none;" target="_blank">
               <img src="./assets/img/Partners/Geeks.jpg" class="communityPartner__image" alt="">
             </a>
           </div>
-
           <div class="community_box box2">
             <a href="https://www.azdev.community/index.html#communities" style="text-decoration: none;" target="_blank">
               <img src="./assets/img/Partners/Az.png" class="communityPartner__image" alt="">
             </a>
           </div>
+        </div>
+
+        <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
+          <div class="community_box box3">
+            <a href="https://givemycertificate.com/" style="text-decoration: none;" target="_blank">
+              <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
+            </a>
           </div>
-
-          <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box3">
-              <a href="https://givemycertificate.com/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
-              </a>
-            </div>
-            </div>
-            <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
-            <div class="community_box box4" data-tilt data-tilt-scale="1.1">
-              <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
-                  alt="Azdev community image">
-              </a>
-            </div>
-
-            <div class="community_box box5" data-tilt data-tilt-scale="1.1">
-              <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
-                <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
-                  alt="Azdev community image">
-              </a>
-            </div>
-            </div>
+        </div>
+          
+        <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
+          <div class="community_box box4 " data-tilt data-tilt-scale="1.1">
+            <a href="https://www.newtonschool.co/" style="text-decoration: none;" target="_blank">
+              <img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
+                alt="Azdev community image">
+            </a>
           </div>
-
+          <div class="community_box box5 " data-tilt data-tilt-scale="1.1">
+            <a href="https://www.codingminutes.com/" style="text-decoration: none;" target="_blank">
+              <img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
+                alt="Azdev community image">
+            </a>
+          </div>
+          </div>
+        </div>
         </div>
 
       </div>
@@ -484,13 +482,13 @@
           </div>
         </div>
 
-        <div class="img_container" data-aos="fade-up" data-aos-duration="1500">
+        <div class="img_container " data-aos="fade-up" data-aos-duration="1500">
           <div class="community_box box5">
             <a href="https://www.linkedin.com/company/sudan-s-tech/" style="text-decoration: none;" target="_blank">
               <img src="./assets/img/Partners/Sudands.jpg" class="communityPartner__image" alt="">
             </a>
           </div>
-          <div class="community_box box5">
+          <div class="community_box box6">
             <a href="https://linktr.ee/lwmcommunity" style="text-decoration: none;" target="_blank">
               <img src="./assets/img/Partners/LWM.png" class="communityPartner__image" alt="">
             </a>
