dark mode fixed

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							<p>CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
 								Where we organize Events, Hackathons, and Workshops on different Technologies.
 								Also, We Share Resources, Roadmaps to learn different technologies and share
-								opportunities related to Internships and different tech programs.
+								opportunities related to Internships and different tech programs.</p>
 
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
@@ -206,7 +206,7 @@
 									More</i></a>
 							</div>
 
-							<br>Join the community on Discord for interaction with students from all over India.
+							<p><br>Join the community on Discord for interaction with students from all over India.
 							</p>
 							<br>
 
