--- a/index.html
+++ b/index.html
@@ -191,9 +191,8 @@
 							<h2>CodeIN Community </h2>
 							<p>CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
 
-								We whole-heartedly organize engaging events, Hackathons, and Workshops on different emerging technologies.
-								Additionally, We share guided roadmaps,1:1 Mentorship and resources to learn different technologies and share
-								opportunities related to upcoming internships and different tech programs.
+								Where we organize Open Source Programs, Hackathons, and Events on different emerging technologies.
+								Additionally, We share guided roadmaps, 1:1 Mentorship from Mentors, resources to learn different technologies and opportunities related to Internships and different tech programs.
 
 
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
@@ -209,8 +208,8 @@
 							</div>
 
 
-							<br>Want to be a part of this amazing community?<br>
-							Hit the JOIN NOW button above and let's connect on discord :)
+							Join the community on Discord for interaction with students from all over India.
+
 
 							</p>
 							<br>
