--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 							</div>
 
 
-							Join the community on Discord for interaction with students from all over India.
+							<br>Join the community on Discord for interaction with students from all over India.
 
 
 							</p>
