--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 							<p>CodeIN Community is the Community of more than 8,000+ Coding Enthusiasts.
 
 								Where we organize Open Source Programs, Hackathons, and Events on different emerging technologies.
-								Additionally, We share guided roadmaps, 1:1 Mentorship from Mentors, resources to learn different technologies and opportunities related to Internships and different tech programs.
+								Additionally, We share guided roadmaps, 1:1 Mentorship from Mentors, Resources to learn Different Technologies.
 
 
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
