--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -69,7 +69,7 @@
             <li class="nav-item">
 
 
-              <a class="nav-link" href="./#hero-area">
+              <a class="nav-link" href="./index.html">
 								Home
 							</a>
 						</li>
