FAQ's section background and text color changed

--- a/index.html
+++ b/index.html
@@ -1667,7 +1667,7 @@
         ==================================== -->
 
 		<!-- FAQs section start	 -->
-	<section id="FAQs">
+	<section id="FAQs" class="FAQs_section">
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">FAQs</h1>
 			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
