--- a/index.html
+++ b/index.html
@@ -1739,13 +1739,13 @@
 				  </div>
 			  <div class="row">
 				  <div class="col-md-6">
-					  <form class="mt-5" id="contactForm">
+					  <form class="mt-5" id="contactForm" method="post">
 						  <div class="form-row">
 							  <div class="form-group col-md-6 ">
-								<input type="text" class="form-control" id="inputName"  placeholder="Name">
+								<input type="text" class="form-control" id="inputName"  placeholder="Name" required>
 							  </div>
 							  <div class="form-group col-md-6 ">
-							  <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+							  <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
 							  </div>
 							</div>
 						  <div class="form-group ">
