--- a/index.html
+++ b/index.html
@@ -1426,6 +1426,18 @@
                 </div>
               </div>
 			  </div>
+						<div class="swiper-slide">
+						<div class="testimonial-item">
+							  <div class="img-thumb">
+
+								<img src="./assets/img/team/tara.jpg" alt="">
+							  </div>
+						  <div class="info">
+							<h2 class="text-dark">Tara Choudhary</h2>
+							<h3>CodeIn Community is one of the best Community.It helped me to start my journey towards Open Source and also learn alot of other stuff form this amazing Community Thank you so much <b>CodeIn Community</b>. </h3>
+						  </div>
+						</div>
+					  </div>
 				  </div>
 				</div>
 			  </div>
