--- a/index.html
+++ b/index.html
@@ -1696,7 +1696,7 @@
 							  <input type="email" class="form-control" id="inputEmail" placeholder="Email">
 							  </div>
 							  <div class="form-group col-md-6 ">
-							  <input type="Contact-No." class="form-control" id="inputContact-No." placeholder="Contact-No.">
+							  <input type="ContactNo" class="form-control" id="inputContactNo" placeholder="Your ContactNo">
 							  </div>
 							</div>
 						  <div class="form-group ">
