--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 							</div>
 
 
-							<br>Join the community on Discord for interaction with students from all over India.
+							<br>Join the Community on Discord for interaction with students from all over India.
 
 
 							</p>
@@ -248,7 +248,7 @@
 						</div>
 						<div class="services-content">
 							<h3><a href="https://discord.com/invite/sqFRzrj7f3">Discord Server</a></h3>
-							<p> Join in the discord community and connect with like minded people across the country.
+							<p> Join in the Discord Community and connect with like minded people across the country.
 							</p>
 							</a>
 						</div>
@@ -282,7 +282,7 @@
 						<div class="services-content">
 							<h3><a href="https://www.linkedin.com/company/codein-community/mycompany/">LinkedIn Page</a>
 							</h3>
-							<p> Follow the official page of CodeIN Community where we regularly post about all the upcoming
+							<p> Follow the Official page of CodeIN Community where we regularly post about all the upcoming
 								workshops and
 								events. </p>
 							</a>
