Scroll button color fixed

--- a/index.html
+++ b/index.html
@@ -2055,6 +2055,12 @@
 		display: none;
 		color: azure;
 		}
+		#btn-back-to-top:hover{
+			background-color:azure;
+		}
+		#btn-back-to-top:hover i{
+			color: #ffd100;
+		}
 	</style>
 
 	<script>	
