made google form to open on different tab

--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@
 				<div class="card-body">
 
 					<h5 class="card-title text-center text-dark">Join our Core Team</h5>
-					<a href="https://bit.ly/JoinCodeINCommunity" class="btn btn-common opportunity_btn" type="button">
+					<a href="https://bit.ly/JoinCodeINCommunity" class="btn btn-common opportunity_btn" type="button" target="_blank">
 
 						Join Us
 					</a>
@@ -1477,7 +1477,7 @@
 				<div class="card-body">
 
 					<h5 class="card-title text-center text-dark">Join Our Mentor Team</h5>
-					<a href="https://forms.gle/5vst4FpM9qveehv4A" class="btn btn-common opportunity_btn" type="button">
+					<a href="https://forms.gle/5vst4FpM9qveehv4A" class="btn btn-common opportunity_btn" type="button" target="_blank">
 
 						Join Us
 					</a>
@@ -1491,7 +1491,7 @@
 				<div class="card-body">
 
 					<h5 class="card-title text-center text-dark">Join Our Volunteer Team</h5>
-					<a href="https://forms.gle/mmqAst945dqzHSYx6" class="btn btn-common opportunity_btn" type="button">
+					<a href="https://forms.gle/mmqAst945dqzHSYx6" class="btn btn-common opportunity_btn" type="button" target="_blank">
 
 						Join Us
 					</a>
