--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						</li>
 
 						<div class="dropdown nav-item">
-							<button class="nav-link btn btn-outline-warning rounded px-3 dropbtn">More Options
+							<button class="nav-link btn btn-outline-warning rounded px-3 dropbtn" id="moreDetails">More Options
 							  <i class="fa fa-caret-down"></i>
 							</button>
 							<div class="dropdown-content">
