Updated the G forms links to open on separate tabs

--- a/opportunity.html
+++ b/opportunity.html
@@ -137,7 +137,7 @@
                             And all eligible participants will receive Goodies, Vouchers and verified Certificates. 🥳
                             <br>
                         </li>
-                        <li> <br>Register here🔥: <a href=" https://bit.ly/CodeIN-100daysofcode">
+                        <li> <br>Register here🔥: <a href=" https://bit.ly/CodeIN-100daysofcode" target="_blank">
                                 https://bit.ly/CodeIN-100daysofcode</a>
                         </li>
                         <br>
@@ -173,7 +173,7 @@
                             🌟 The hackathon is totally AR-based <br></li>
                         <li>
                             📌 Register here: <a
-                                href="https://bit.ly/spark-a-thon-codein">https://bit.ly/spark-a-thon-codein</a>
+                                href="https://bit.ly/spark-a-thon-codein" target="_blank">https://bit.ly/spark-a-thon-codein</a>
                             <br>
                         </li>
                         <li>
@@ -182,7 +182,7 @@
                             your
                             project:
                         </li>
-                        ❄️Telegram : <a href="https://t.me/CodeINCommunity">https://t.me/CodeINCommunity</a>
+                        ❄️Telegram : <a href="https://t.me/CodeINCommunity" target="_blank">https://t.me/CodeINCommunity</a>
                     </ul>
                     <br>
                 </div>
@@ -226,7 +226,7 @@
                             _
                         </li>
                         <br>📄 Register here 🙌
-                        <a href="  https://reskilll.com/event/codeinewinterfest">
+                        <a href="  https://reskilll.com/event/codeinewinterfest" target="_blank">
                             https://reskilll.com/event/codeinewinterfest</a> <br>
                     </ul>
                     <br>
@@ -263,7 +263,7 @@
 
                             📌Steps for Participation:
                             Step 1: Register here🔥: <a
-                                href="https://organize.mlh.io/participants/events/7191-local-hack-day-build-2022">https://organize.mlh.io/participants/events/7191-local-hack-day-build-2022</a><br>
+                                href="https://organize.mlh.io/participants/events/7191-local-hack-day-build-2022" target="_blank">https://organize.mlh.io/participants/events/7191-local-hack-day-build-2022</a><br>
                             Step 2: Fill this form: <a href="https://bit.ly/MLHBuild">https://bit.ly/MLHBuild </a>(
                             Referred email: <b> mesouravofficial@gmail.com</b>) <br>
                             <br>
@@ -297,7 +297,7 @@
                             3.Corresponding Microsoft certification exam. <br><br>
 
                             Apply here🔥: <a
-                                href="https://pulse.microsoft.com/en/skill-forward-en/na/fa1-get-rewarded-for-gaining-tech-skills-and-free-certifications-at-the-microsoft-spring-skills-challenge/">https://pulse.microsoft.com/en/skill-forward-en/na/fa1-get-rewarded-for-gaining-tech-skills-and-free-certifications-at-the-microsoft-spring-skills-challenge/</a>
+                                href="https://pulse.microsoft.com/en/skill-forward-en/na/fa1-get-rewarded-for-gaining-tech-skills-and-free-certifications-at-the-microsoft-spring-skills-challenge/" target="_blank">https://pulse.microsoft.com/en/skill-forward-en/na/fa1-get-rewarded-for-gaining-tech-skills-and-free-certifications-at-the-microsoft-spring-skills-challenge/</a>
                         </li>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                         </li><br>
                         <li>
                             📌Apply here🔥: <a
-                                href="https://docs.google.com/forms/d/e/1FAIpQLSdJXkI0SyTKKZyxU-ite55LlhHi_bMtoX2U-Y9NAAlWT1VpLw/viewform">https://docs.google.com/forms/d/e/1FAIpQLSdJXkI0SyTKKZyxU-ite55LlhHi_bMtoX2U-Y9NAAlWT1VpLw/viewform</a>
+                                href="https://docs.google.com/forms/d/e/1FAIpQLSdJXkI0SyTKKZyxU-ite55LlhHi_bMtoX2U-Y9NAAlWT1VpLw/viewform" target="_blank">https://docs.google.com/forms/d/e/1FAIpQLSdJXkI0SyTKKZyxU-ite55LlhHi_bMtoX2U-Y9NAAlWT1VpLw/viewform</a>
                         </li>
                         <br>
                         <li>
@@ -373,14 +373,14 @@
 
                         <li>✨Submit your Arts now!
                             <a
-                                href="https://www.delloffers.in/campassador/digitalart">https://www.delloffers.in/campassador/digitalart</a>
+                                href="https://www.delloffers.in/campassador/digitalart" target="_blank">https://www.delloffers.in/campassador/digitalart</a>
                             (In Dell Campassador Email ID : <b>mesouravofficial@gmail.com</b> )
                         </li><br>
 
                         <li>Join the group for such more Dell programs, contests, opportunities, offers ...</li><br>
 
                         <li>❄️WhatsApp Group for Updates: <a
-                                href="https://chat.whatsapp.com/EzF3iZHT28K4Lp1JBOA1cg">https://chat.whatsapp.com/EzF3iZHT28K4Lp1JBOA1cg</a>
+                                href="https://chat.whatsapp.com/EzF3iZHT28K4Lp1JBOA1cg" target="_blank">https://chat.whatsapp.com/EzF3iZHT28K4Lp1JBOA1cg</a>
                         </li>
 
                         <br>
@@ -414,14 +414,14 @@
                             their corporate career.
                         </li>
                         <br>
-                        <li>Rekindle: <a href="https://bit.ly/34i2UuL">https://bit.ly/34i2UuL</a></li><br>
+                        <li>Rekindle: <a href="https://bit.ly/34i2UuL" target="_blank">https://bit.ly/34i2UuL</a></li><br>
 
                         <li>Apart from LinkedIn, you can fill the Application on amazon job portal as well.
                             Job ID: A1519584
                         </li>
 
                         <li>Apply here if you use linkedin🙌: <a
-                                href="https://www.linkedin.com/jobs/view/2608825615">https://www.linkedin.com/jobs/view/2608825615</a>
+                                href="https://www.linkedin.com/jobs/view/2608825615" target="_blank">https://www.linkedin.com/jobs/view/2608825615</a>
                         </li>
                         <br>
                         </li>
@@ -442,7 +442,7 @@
                         </li>
                         <br>
                         <li>Apply here🔥: <a
-                                href="https://reskilll.com/hack/roninlabs">https://reskilll.com/hack/roninlabs</a></li>
+                                href="https://reskilll.com/hack/roninlabs" target="_blank">https://reskilll.com/hack/roninlabs</a></li>
 
                         <br>
                 </div>
@@ -476,7 +476,7 @@
                         <li>
                             To know more, Click here & Register🔥:-
                             <a
-                                href="https://bit.ly/WinterInterviewPreparation">https://bit.ly/WinterInterviewPreparation</a>
+                                href="https://bit.ly/WinterInterviewPreparation" target="_blank">https://bit.ly/WinterInterviewPreparation</a>
                         </li>
 
                         <li>📌Invitation Code: GFG5CN3BL</li><br>
@@ -503,7 +503,7 @@
                             in the world.🥳 </li> <br>
 
                         <li>📌Register here🔥: <a
-                                href="https://imaginecup.microsoft.com/en-us/Events">https://imaginecup.microsoft.com/en-us/Events</a>
+                                href="https://imaginecup.microsoft.com/en-us/Events" target="_blank">https://imaginecup.microsoft.com/en-us/Events</a>
                         </li>
 
                     </ul>
@@ -531,7 +531,7 @@
                             open until January 17th for the spring semester, running January 31st through April 22nd,
                             2022. Learn more here and apply today</li><br>
                         <li>Apply Link🔥: <a
-                                href="https://fellowship.mlh.io/programs/open-source">https://fellowship.mlh.io/programs/open-source</a>
+                                href="https://fellowship.mlh.io/programs/open-source" target="_blank">https://fellowship.mlh.io/programs/open-source</a>
                         </li>
 
 
@@ -566,7 +566,7 @@
                         <li>
                             To know more, Click here 👇:-
                             <a
-                                href="https://summerofcode.withgoogle.com/">https://summerofcode.withgoogle.com/</a>
+                                href="https://summerofcode.withgoogle.com/" target="_blank">https://summerofcode.withgoogle.com/</a>
                         </li>
 
                         <br>
@@ -597,7 +597,7 @@
 
                         <ul>📌Register here🔥:</ul> 
                             <a
-                                href="https://hacktoberfest.com/">https://hacktoberfest.com/</a>
+                                href="https://hacktoberfest.com/" target="_blank">https://hacktoberfest.com/</a>
                         </li>
 
                     </ul>
@@ -619,7 +619,7 @@
                         <li>  Throughout the Program, students experience guest lectures with senior management, and have opportunities to attend networking, team building, social and charitable events.</li>
                             </li><br>
                         <li>Read more here: <a
-                                href="https://www.noticebard.com/top-7-internships-for-cse-students-in-india/">https://www.noticebard.com/top-7-internships-for-cse-students-in-india/</a>
+                                href="https://www.noticebard.com/top-7-internships-for-cse-students-in-india/" target="_blank">https://www.noticebard.com/top-7-internships-for-cse-students-in-india/</a>
                         </li>
 
 
@@ -656,7 +656,7 @@
                         <li>
                             To know more, Click here 👇:-
                             <a
-                                href="https://www.localwalkins.com/job/summer-analyst-internship?utm_campaign=google_jobs_apply&utm_source=google_jobs_apply&utm_medium=organic">https://www.localwalkins.com/job/summer-analyst-internship?utm_campaign=google_jobs_apply&utm_source=google_jobs_apply&utm_medium=organic</a>
+                                href="https://www.localwalkins.com/job/summer-analyst-internship?utm_campaign=google_jobs_apply&utm_source=google_jobs_apply&utm_medium=organic" target="_blank">https://www.localwalkins.com/job/summer-analyst-internship?utm_campaign=google_jobs_apply&utm_source=google_jobs_apply&utm_medium=organic</a>
                         </li>
 
                         <br>
@@ -681,7 +681,7 @@
                             <li>You'll collaborate on projects that are sourced directly from our corporate partners. Whether you're contributing to a major Open Source technology or a new greenfield project, you'll be solving a real-world need with technologies that employers care about.</li>
                                <ul>📌Register here🔥:</ul> 
                             <a
-                                href="https://fellowship.mlh.io/">https://fellowship.mlh.io/</a>
+                                href="https://fellowship.mlh.io/" target="_blank">https://fellowship.mlh.io/</a>
                         </li>
 
                     </ul>
@@ -710,7 +710,7 @@
                         Other participants will have the chance to win Tshirts and Swag and will get certificates of participation. These will be provided after the end of the contest on May 11, 2022
                         <li>Read more here: 👇</li>
                              <a
-                                href="https://codeheat.org/">https://codeheat.org/</a>
+                                href="https://codeheat.org/" target="_blank">https://codeheat.org/</a>
                         </li>
 
 
@@ -747,7 +747,7 @@
                         <li>
                             To know more, Click here 👇:-
                             <a
-                                href="https://hack2skill.com/hack/googlecloud-tc-ace1?utm_source=mail1&utm_medium=sendy">https://hack2skill.com/hack/googlecloud-tc-ace1?utm_source=mail1&utm_medium=sendy</a>
+                                href="https://hack2skill.com/hack/googlecloud-tc-ace1?utm_source=mail1&utm_medium=sendy" target="_blank">https://hack2skill.com/hack/googlecloud-tc-ace1?utm_source=mail1&utm_medium=sendy</a>
                         </li>
 
                         <br>
@@ -771,7 +771,7 @@
                             <li>Complete your path and stand a chance to win* $200 Google Cloud Platform Vouchers-to be claimed within 90 days and spent by December 31, 2022🔥</li>
                                <ul>📌Register here🔥:</ul> 
                             <a
-                                href="https://events.withgoogle.com/emea-summer-learning/#content">https://events.withgoogle.com/emea-summer-learning/#content</a>
+                                href="https://events.withgoogle.com/emea-summer-learning/#content" target="_blank">https://events.withgoogle.com/emea-summer-learning/#content</a>
                         </li>
 
                     </ul>
@@ -821,7 +821,7 @@
                             <li><a href="#">Hackathons</a></li>
                             <li><a href="#">Open Source</a></li>
                             <li><a
-                                    href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform">Volunteer
+                                    href="https://docs.google.com/forms/d/e/1FAIpQLScKGzCBBaMDjzp9zgkAtqv0RDwAitR1RJouePcL_DP7Ds3VNQ/viewform" target="_blank">Volunteer
                                     Group</a></li>
                             <li><a href="https://codeincommunity.bio.link/">Community</a></li>
                         </ul>
