fixing navbar scroll to not scroll past the heading of the section

--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
 	<!-- events section starts -->
 
 
-	<div class="events" id="events">
+	<div class="events section-padding" id="events">
 		<div class="container" style="max-width: 94%;">
 			<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
 				<h1 class="section-title wow fadeInDown mt-5" data-wow-delay="0.3s">Our <span> Events</span></h1>
@@ -1205,7 +1205,7 @@
 
 	<!--Blog Section Start -->
 
-	<div id="blog" class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+	<div id="blog" class="section-padding text-center" data-aos="fade-up" data-aos-duration="1500">
 		<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Our Blogs</h2>
 		<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 	</div>
@@ -1679,7 +1679,7 @@
         ==================================== -->
 
 		<!-- FAQs section start	 -->
-	<section id="FAQs" class="FAQs_section">
+	<section id="FAQs" class="FAQs_section section-padding">
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">FAQs</h1>
 			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
